openshift/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: posuite-frontend
  labels:
    app: posuite
    component: frontend
spec:
  selector:
    app: posuite
    component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
